--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.eslintcache
+yarn.lock
+package-lock.json
+
+debug.log
+
+/.idea
+/.vscode
+
